administrator/templates/atum/scss/blocks/_quickicons.scss
// Quick Icons

@import "../variables";

.quick-icons {
  background-color: $white;
  margin-bottom: 1rem;
  padding: 0.5rem 1.5rem;

  ul {
    list-style: none;
  }

  li {
    min-width: 10rem;
    min-height: 7.5rem;
    position: relative;
    background: $quickicon-bg;
    margin: 0.5rem;
    padding: 0;

    a {
      @include hover-focus-active {
        text-decoration: none;
        box-shadow: $atum-box-shadow;
        color:rgba(255,255,255,0.9);
        background: var(--atum-link-color);
      }
    }
  }

  .quickicon-name {
    font-size: 1rem;
    padding-bottom: .3rem;
  }

  .quickicon-amount {
    font-size: 2rem;
    padding: .3rem;
  }

  .thsd {
    font-size: 0.9rem;
    letter-spacing: normal;
    font-weight: normal;
  }

  .quickicon-text {
    min-height: 1.2rem;
  }

  .quickicon-linkadd {
    position: relative;
    overflow: hidden;
    line-height: 3.4rem;
    margin-top: 0.4rem;
    border: 1px solid $gray-400;
    text-decoration: none;
    display:flex;

    @include media-breakpoint-up(md) {
      line-height: 2rem;
    }

    @include hover-focus-active {
      text-decoration: none;
      box-shadow: $atum-box-shadow;
      color:rgba(255,255,255,0.9);
      background: var(--atum-link-color);
    }

    .fa {
      display: inline-block;
      width: 35px;
      height: auto;
      line-height: 2rem;
      color: var(--white);
      position: relative;
      float:left;
      background-color: var(--atum-link-color);
      text-align: center;
      margin-right:2rem;
    }
  }

  a:not(.quickicon-linkadd) {
    display: inline-flex;
    min-height: 5.4rem;
    flex-direction: column;
    width: 100%;
    transition: all .25s ease;
    text-align: center;
    border: 1px solid $gray-400;

    @include hover-focus-active {
      text-decoration: none;
    }

    > div {
      flex: 1 0 0;
      margin: 0 auto;
    }

    .j-links-link {
      display: block;
      width: 100%;
      padding: 0 1rem;
      line-height: 1.1;
    }

    .fa,
    .fab {
      margin: 5px auto 0;
      font-size: 1.3rem;
    }

    &.warning {
      color: $danger-txt;
      background: $danger-bg;
      border: 1px solid lighten($danger-txt, 30%);

      &:hover {
        color:rgba(255,255,255,0.9);
        background: var(--danger);
      }
    }

    &.danger {
      color: $danger-txt;
      background: $danger-bg;
      border: 1px solid lighten($danger-txt, 30%);

      &:hover {
        color:rgba(255,255,255,0.9);
        background: var(--danger);
      }
    }

    &.success {
      color: $success-txt;
      background:  $success-bg;
      border: 1px solid lighten($success-txt, 30%);


      &:hover {
        color:rgba(255,255,255,0.9);
        background: var(--success);
      }
    }
  }
}

#content{
  .menu-quicktask{
    position: absolute;
    right: 1.25rem;
  }
}

